View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032113 | Open CASCADE | OCCT:Visualization | public | 2021-02-02 23:00 | 2021-02-06 14:29 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032113: Visualization, TKOpenGl - broken PBR diffuse map within OpenGl_Caps::buffersOpaqueAlpha() on OpenGL ES 2.0 | ||||
Description | OpenGl_PBREnvironment baking doesn't work as expected with OpenGl_Caps::buffersOpaqueAlpha() enabled on OpenGL ES 2.0 due to disabled writes into Alpha channel. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32113 has been created by kgv. SHA-1: 6bbc174867e115621d4447f59f1f99659deb7a1e No new revisions were added by this update. |
|
Patch is ready for review - OCCT branch: CR32113. |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2021-02-05 master SHA - d918913f1cfa6df6852ccc3cab50aae2b5a29821 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2021-02-05 SHA - 7f3780c87f7b9ca7bc315437ae37fd3815a4316d was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17801.74000000001 / 17781.070000000076 [+0.12%] Products Total CPU difference: 11522.820000000105 / 11527.24000000011 [-0.04%] Windows-64-VC14: OCCT Total CPU difference: 19371.578125 / 19391.0625 [-0.10%] Products Total CPU difference: 12882.46875 / 12836.03125 [+0.36%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32113 has been deleted by inv. SHA-1: 6bbc174867e115621d4447f59f1f99659deb7a1e |
occt: master 7106e4c8 2021-02-02 20:02:51 Committer: bugmaster Details Diff |
0032113: Visualization, TKOpenGl - broken PBR diffuse map within OpenGl_Caps::buffersOpaqueAlpha() on OpenGL ES 2.0 Fixed enabling of alpha channel writes while baking PBR environment. |
Affected Issues 0032113 |
|
mod - src/OpenGl/OpenGl_PBREnvironment.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-02-02 23:00 | kgv | New Issue | |
2021-02-02 23:00 | kgv | Assigned To | => kgv |
2021-02-02 23:01 | kgv | Relationship added | child of 0032083 |
2021-02-02 23:03 | kgv | Relationship added | child of 0031597 |
2021-02-03 04:03 | git | Note Added: 0098630 | |
2021-02-03 04:04 | kgv | Note Added: 0098631 | |
2021-02-03 04:04 | kgv | Assigned To | kgv => osa |
2021-02-03 04:04 | kgv | Status | new => resolved |
2021-02-03 14:15 |
|
Note Added: 0098641 | |
2021-02-03 14:15 |
|
Assigned To | osa => bugmaster |
2021-02-03 14:15 |
|
Status | resolved => reviewed |
2021-02-06 14:16 | bugmaster | Note Added: 0098717 | |
2021-02-06 14:16 | bugmaster | Status | reviewed => tested |
2021-02-06 14:20 | bugmaster | Test case number | => Not required |
2021-02-06 14:24 | bugmaster | Changeset attached | => occt master 7106e4c8 |
2021-02-06 14:24 | bugmaster | Status | tested => verified |
2021-02-06 14:24 | bugmaster | Resolution | open => fixed |
2021-02-06 14:29 | git | Note Added: 0098729 |